--- a/_projects/2020-04-24-project-3.md
+++ b/_projects/2020-04-24-project-3.md
@@ -1,7 +1,7 @@
 ---
-title: Sample Post
-layout: post
-post-image: ../assets/images/giornodots.png
+title: Project 3
+layout: project
+project-image: ../assets/images/giornodots.png
 description: A sample post to show how the content will look and how will different
   headlines, quotes and codes will be represented.
 tags:
