--- a/_projects/2020-04-21-project-1.md
+++ b/_projects/2020-04-21-project-1.md
@@ -1,5 +1,5 @@
 ---
-title: Project 1
+title: Lichgate & Coral Engine
 layout: project
 project-image: ../assets/images/LichgatePoweredByCoralEngine.png
 description: Jekyll is a static site generator. You give it text written in your favorite
