--- a/_projects/2020-04-22-project-2.md
+++ b/_projects/2020-04-22-project-2.md
@@ -1,5 +1,5 @@
 ---
-title: Project 2
+title: Mowdown
 layout: project
 project-image: ../assets/images/MowDownLogo.png
 description: This post will guide you to install WhatATheme on your Jekyll site, follow
