--- a/_projects/2020-04-24-project-3.md
+++ b/_projects/2020-04-24-project-3.md
@@ -1,7 +1,7 @@
 ---
-title: Project 3
+title: Ability System & My Custom Engine
 layout: project
-project-image: ../assets/images/giornodots.png
+project-image: ../assets/images/AbilitySystemThumbnail.png
 description: A sample post to show how the content will look and how will different
   headlines, quotes and codes will be represented.
 tags:
